<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:padding="17dp">

    <TextView
        android:id="@+id/editPersonalDataTitle"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_profile_edit_personal_data_title"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/editPersonalDataTitle">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueInputEmailEditProfile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_profile_hint_email"
            android:textCursorDrawable="@null"
            app:boxStrokeColor="@color/dark_blue"
            app:hintTextColor="@color/dark_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditProfileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueInputNameEditProfile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/main_profile_hint_firstname"
            android:textCursorDrawable="@null"
            app:boxStrokeColor="@color/dark_blue"
            app:hintTextColor="@color/dark_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditProfileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueInputSurnameEditProfile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/main_profile_hint_surname"
            android:textCursorDrawable="@null"
            app:boxStrokeColor="@color/dark_blue"
            app:hintTextColor="@color/dark_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surnameEditProfileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueInputMiddleNameEditProfile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/main_profile_hint_middle_name"
            android:textCursorDrawable="@null"
            app:boxStrokeColor="@color/dark_blue"
            app:hintTextColor="@color/dark_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/middleNameProfileEditEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveDataButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue"
            android:text="@string/main_profile_edit_personal_data_save_data"
            android:textAllCaps="false"
            android:textColor="@color/main_color"
            app:layout_constraintTop_toBottomOf="@id/valueInputPasswordAuth"
            app:rippleColor="@color/main_color"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>