<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:padding="17dp">

    <TextView
        android:id="@+id/spreadAuthSubtitleTextView"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/spread_auth_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/valueInputEmailAuth"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/spread_auth_hint_email"
        android:textCursorDrawable="@null"
        app:boxStrokeColor="@color/dark_blue"
        app:hintTextColor="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/spreadAuthSubtitleTextView"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailAuthEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/valueInputPasswordAuth"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/spread_auth_hint_password"
        android:textCursorDrawable="@null"
        app:boxStrokeColor="@color/dark_blue"
        app:hintTextColor="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/valueInputEmailAuth"
        app:layout_constraintVertical_chainStyle="packed"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordAuthEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/spread_auth_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        app:layout_constraintTop_toBottomOf="@id/valueInputPasswordAuth"
        app:rippleColor="@color/main_color"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small" />

</androidx.constraintlayout.widget.ConstraintLayout>