<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="17dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueInputEmailProfile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_profile_hint_email"
            android:textCursorDrawable="@null"
            app:boxStrokeColor="@color/dark_blue"
            app:hintTextColor="@color/dark_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailProfileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueInputNameProfile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/main_profile_hint_firstname"
            android:textCursorDrawable="@null"
            app:boxStrokeColor="@color/dark_blue"
            app:hintTextColor="@color/dark_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameProfileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueInputSurnameProfile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/main_profile_hint_surname"
            android:textCursorDrawable="@null"
            app:boxStrokeColor="@color/dark_blue"
            app:hintTextColor="@color/dark_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surnameProfileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/valueInputMiddleNameProfile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/main_profile_hint_middle_name"
            android:textCursorDrawable="@null"
            app:boxStrokeColor="@color/dark_blue"
            app:hintTextColor="@color/dark_blue">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/middleNameProfileEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/editProfileTextView"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:text="@string/main_profile_edit_personal_data" />

    </LinearLayout>
</ScrollView>